--- a/app/views/foods/_modal_add_cart.html.erb
+++ b/app/views/foods/_modal_add_cart.html.erb
@@ -9,7 +9,7 @@
         </div>
         <div class="modal-body">
           <label for="amount"><%= t "views.static_pages.home.cart.amount" %></label>
-          <input type="hidden" name="food_id" value="<%= @foods.ids %>" >
+          <input type="hidden" name="food_id">
          
           <div class="row">
             <div class="col-md-10">
