--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -66,7 +66,8 @@
 		            </li>
 		         <% end %>
                 
-		        <li><button class="btn btn-link btn-lg" ><span class="glyphicon glyphicon-shopping-cart"></span></button></li>
+		       
+		        <li><a href= <%= carts_url %>><i class="glyphicon glyphicon-shopping-cart" aria-hidden="true" id="cart-icon"></i><span id="badge" class="badge"></span></a></li>
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
 		      </div><!-- /.container-collapse -->
