--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 
   </head>
 
-  <body onclick="bindModal();">
+  <body>
   	<%= render "layouts/header" %>
     <div class="container">
       <% flash.each do |message_type, message| %>
