--- a/app/views/foods/_thumbnail.html.erb
+++ b/app/views/foods/_thumbnail.html.erb
@@ -31,10 +31,11 @@
                    
                   </div>
                   <div class="col-md-4 col-sm-4">
-                    <button value="<%= obj.id %>" class="show-add btn btn-success pull-right" data-toggle="modal" data-target="#addFood"><i class="fa fa-cart-plus " aria-hidden="true"></i></button>
+                    <button value="<%= obj.id %>" class="show-add btn btn-success pull-right" data-toggle="modal" data-target="#addFood-<%= obj.id %>"><i class="fa fa-cart-plus " aria-hidden="true"></i></button>
                   </div>
                 </div>
             </span>
           </div>
+          <%= render partial: "modal_add_cart", locals: {food: obj} %>
     <% end %>
 </ul>
