--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -609,3 +609,27 @@ img {
 .search-form {
   width: 350px !important;
 }
+
+#order-head {
+  border: .5px solid #DDE2E4;
+  margin-top: 30px;
+  padding: 4px;
+}
+
+#order-customer {
+  border: .5px solid #9CA643;
+  margin: 10px;
+  padding: 10px;
+}
+
+#order-address {
+  border: .5px;
+  margin: 10px;
+  padding: 10px;
+}
+
+#order-body {
+  border: .5px solid #DDE2E4;
+  border-top: none;
+  padding: 30px;
+}
