--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,19 +1,49 @@
 <li id="<%= cart.id %>" class="li-cart">
   <div class="container">
-    <div id="cart" class="show-cart">
-      <img src="<%= cart.food.img_url %>"  height="150" width="150">
-    </div>
-    <div id="cart-name" class="show-cart">
-      <%= cart.food.name %>
-    </div>
-    <div class="price" id="price-<%= cart.id %>">
-      <%= cart.food.price %> $
-    </div>
-    <input class="quantity" type="number" min="0" style="width: 150px" value="<%= cart.quantity %>" id="cart-<%= cart.id %>">
-    <span id="delete-cart"><%= link_to  cart, method: :delete, :remote => true  do%>
-            <i class="fa fa-times" aria-hidden="true"></i>
-          <% end %>
-    </span>
+      <div class="row">
+          <div class="col-sm-12 col-md-10 col-md-offset-1">
+              
+              <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>Product</th>
+                        <th>Quantity</th>
+                        <th class="text-center">Price</th>
+                        <th class="text-center">Total</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="col-sm-8 col-md-8">
+                          <div class="media">
+                            <div id="cart" class="show-cart col-md-5">
+                              <img src="<%= cart.food.img_url %>"  height="150" width="300">
+                            </div>
+                            <div class="media-body col-md-3">
+                                <h4 id="cart-name" class="show-cart"><%= cart.food.name %></h4>
+                                <h5 class="media-heading"> by <a href="#">Brand name</a></h5>
+                                <span>Status: </span><span class="text-success"><strong>In Stock</strong></span>
+                            </div>
+                          </div>
+                        </td>
+                        <td class="col-sm-1 col-md-1" style="text-align: center">
+                          <input class="quantity" type="number" min="0" style="width: 150px" value="<%= cart.quantity %>" id="cart-<%= cart.id %>">
+                        </td>
+                        <td class="col-sm-1 col-md-1 text-center">
+                          <div class="price" id="price-<%= cart.id %>">
+                            <%= get_promotion_price cart.food.price, cart.food.discount %>
+                          </div>
+                        </td>
+                        <td class="col-sm-1 col-md-1 text-center" id="total_item"><strong></strong></td>
+                        <td class="col-sm-1 col-md-1 text-center">
+                        
+                          <span id="delete-cart"><%= link_to  cart, method: :delete, :remote => true  do%><i class="fa fa-times btn btn-danger" aria-hidden="true"></i><% end %></span>
+                        </td>
+                    </tr>
+                </tbody>
+              </table>
+          </div>
+      </div>
   </div>
-  <h1></h1>
 </li>
