--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,7 +38,7 @@
 		          </ul>
 		        </li>
 
-		        
+		        <li class="active"><%= link_to orders_path do %><%= t "header.order" %><% end %>
 		        <li><a href="#"><%= t "header.contact_us" %></a></li>
 
 		        <% if logged_in? %>
