--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -601,6 +601,11 @@ img {
   margin-left: -300px !important;
 }
 
+.modal-lg-2 {
+  margin-left: -300px !important;
+  width: 600px !important;
+}
+
 .user_avatar {
   height: 70px;
   width: 70px;
