--- a/app/views/layouts/employee.html.erb
+++ b/app/views/layouts/employee.html.erb
@@ -8,6 +8,7 @@
 
 <!------ Include the above in your HEAD tag ---------->
 
+
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet"/>
 
 </head>
@@ -29,20 +30,17 @@
 						<div class="side-menu-container">
 							<ul class="nav navbar-nav">
 								<!-- admin  -->
-								 <% if @current_user.Admin? %>
-	                                <li class="active"><a href="#"><span class="glyphicon glyphicon-signal"></span> Dashboard</a></li>
-									<li><%= link_to admin_food_categories_path do %><i class="glyphicon glyphicon-tasks"></i><%= t ".food_categories" %><% end %></li>
-									<li><%= link_to admin_foods_path do %><i class="glyphicon glyphicon-cutlery"></i><%= t ".foods" %><% end %></li>
-		                            <li><%= link_to admin_orders_path do %><i class="glyphicon glyphicon-list-alt"></i><%= t ".list_orders" %><% end %></li>
-									<li><%= link_to admin_users_path do %><i class="glyphicon glyphicon-user"></i><%= t ".Users" %><% end %></li>
-									<li><a href="#"><span class="glyphicon glyphicon-user"></span>Cá Nhân</a></li>
-								<% end %>
+								
 								<!-- nguoi giao hang -->
 								 <% if @current_user.Employee? %>
 								    <li><%= link_to employee_root_path do %><i class="glyphicon glyphicon-signal"></i><%= t ".dashboard" %><% end %></li>
+								    <li><%= link_to employee_orders_path do %><i class="glyphicon glyphicon-list-alt"></i><%= t ".all_orders" %><% end %></li>
+
+								    <li><a href="<%= orders_path(orders: "new")%>"><span class="glyphicon glyphicon-pushpin"></span><%= t "views.layouts.header.new_order" %></a></li>
+								    <li><a href="<%= orders_path(orders: "inprogress")%>"><span class="glyphicon glyphicon-send"></span><%= t "views.layouts.header.processing" %></a></li>
+							        <li><a href="<%= orders_path(orders: "done")%>"><span class="glyphicon glyphicon-ok-sign"></span><%= t "views.layouts.header.done" %></a></li>
+							       
 									
-	                                <li><a href="#"><span class="glyphicon glyphicon-send"></span>Đơn Hàng Mới</a></li>
-									<li><a href="#"><span class="glyphicon glyphicon-list-alt"></span>Đơn Hàng Của Tôi</a></li>
 									<!-- don hang cua toi bao gom don hang chua giao va da giao -->
 		                            <li><a href="#"><span class="glyphicon glyphicon-user"></span>Cá Nhân</a></li>
 								 <% end %>
