--- a/app/views/orders/_customer_index.html.erb
+++ b/app/views/orders/_customer_index.html.erb
@@ -12,9 +12,9 @@
             <div class="caption">
               <h4><%= link_to order_detail.food.name, order_detail.food, class: "text-center" %></h4>
               <div class="row">
-                <div class="col-md-12"><span><%= t("views.static_pages.home.show_orders.quantity") + " #{order_detail.quantity}" %></span></div>
-                <div class="col-md-12">
-                  <span><%= t("views.orders.created_at") + " #{order_detail.created_at.strftime(t("date_format"))}" %></span>
+                <div class="col-md-12"><label><%= t("quantity") + " :"%></label><span><%= order_detail.quantity %></span></div>
+                <div class="col-md-12"><label><%= t("created_at") %></label>
+                  <span><%= order_detail.created_at.strftime(t("date_format")) %></span>
                 </div>
               </div>
             </div>
@@ -36,17 +36,3 @@
   </div>
 <% end %>
 
-<script>
-  $(document).ready(function () {
-    $('#update-order button').click(function () {
-      if (confirm('<%= I18n.t "views.orders.checked.confirm" %>')) {
-        $.ajax({
-          url: '/orders/' + $(this).attr("data-id"),
-          type: 'PATCH',
-          data: {'order_id': $(this).attr("data-id")},
-          datatype: 'script'
-        });
-      }
-    });
-  });
-</script>
