--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -638,3 +638,23 @@ img {
   border-top: none;
   padding: 30px;
 }
+
+.x-panel {
+  background: #fdfdfd;
+  border: 1px solid #e6e9ed;
+  -moz-column-break-inside: avoid;
+  -webkit-column-break-inside: avoid;
+  column-break-inside: avoid;
+  display: inline-block;
+  margin-bottom: 10px;
+  opacity: 1;
+  padding: 10px 17px;
+  position: relative;
+  transition: all .2s ease;
+  width: 100%;
+}
+
+#employee_chart {
+  width: 800px;
+  height: 500px;
+}
