--- a/app/views/layouts/employee.html.erb
+++ b/app/views/layouts/employee.html.erb
@@ -42,7 +42,7 @@
 							       
 									
 									<!-- don hang cua toi bao gom don hang chua giao va da giao -->
-		                            <li><a href="#"><span class="glyphicon glyphicon-user"></span>Cá Nhân</a></li>
+		                            <%# <li><a href="#"><span class="glyphicon glyphicon-user"></span>Cá Nhân</a></li> %>
 								 <% end %>
 
 								<!-- Dropdown-->
@@ -70,7 +70,9 @@
 	<div class="col-md-10 content">
 	    <div>
 	    	<% flash.each do |message_type, message| %>
-		      <div class="alert alert-<%= message_type %>"><%= message %></div>
+		      <div class="alert alert-<%= message_type %>"><%= message %>
+			    <button class="close" data-dismiss="alert">×</button>
+			  </div>
 		    <% end %>
 	        <div class="panel panel-light">
 		        <div class="panel-heading">
