--- a/app/views/employee/dashboard/index.html.erb
+++ b/app/views/employee/dashboard/index.html.erb
@@ -1,7 +1,7 @@
 <h4>employee page</h4>
 
 <div class="col-md-12 col-sm-12 col-xs-12">
-  <div class="col-md-6">
+  <div class="col-md-8 col-md-offset-2">
     <div id="device_cycle">
       <div class="x-panel tile overflow-hidden">
         <div class="x-title">
@@ -32,6 +32,8 @@
   <div class="x-panel">
     <div class="x-title">
       <label><span><%= t "admin.top_order" %></span></label>
+      <br>
+        <%= link_to t("admin.go_to_manage_orders"), employee_orders_path %>
       <ul class="nav navbar-right panel-toolbox">
         <li>
           <%= link_to "", class: "collapse-link" do %>
@@ -41,28 +43,9 @@
       </ul>
       <div class="clearfix"></div>
     </div>
+    <hr>
     <div class="x-content">
-      <%#= render 'hot_food' %>
+      <%= render 'top_order' %>
     </div>
   </div>
 </div>
-
-<div class="col-md-12 col-sm-12 col-xs-12">
-	<div class="x-panel">
-	  <div class="x-title">
-	    <label><span><%= t "admin.top_product" %></span></label>
-	    <ul class="nav navbar-right panel-toolbox">
-	      <li>
-	        <%= link_to "", class: "collapse-link" do %>
-	          <i class="fa fa-chevron-up"></i>
-	        <% end %>
-	      </li>
-	    </ul>
-	    <div class="clearfix"></div>
-	  </div>
-	  <div class="x-content">
-	    <%#= render 'hot_food' %>
-	  </div>
-	</div>
-</div>
-
