--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -658,3 +658,8 @@ img {
   width: 800px;
   height: 500px;
 }
+
+.backgr-img {
+  background-image: url("../images/986.jpg");
+  background-color: #cccccc;
+}
