--- a/app/views/shared/_form_login.html.erb
+++ b/app/views/shared/_form_login.html.erb
@@ -3,11 +3,10 @@
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 
-<div class="container">
-  <div class="row">
-
+<div class="backgr-img container">
+  <br><br><br><br><br>
+  <div class="row col-md-4 col-md-offset-4">
     <div class="main">
-
       <h3>Please Log In, or <%= link_to "Sign up", signup_path %></h3>
       <div class="row">
         <div class="col-xs-6 col-sm-6 col-md-6">
@@ -21,7 +20,6 @@
         <hr class="hr-or">
         <span class="span-or">or</span>
       </div>
-
       <div class="row">
         <%= form_for(:session, url:login_path) do |f| %>
            <%= f.label :email %>
@@ -38,10 +36,9 @@
            <%= f.submit 'login', class: 'btn btn-primary'%>
         <% end %>
 
-        <p>New user? <%= link_to "Sign up now!", signup_path %></p>
+        <p> <%= link_to "Sign up now!", signup_path %>
+        <%= link_to "Visit side!", root_path %></p>
       </div>
-    
     </div>
-    
   </div>
 </div>
