--- a/app/views/shared/_form_signup.html.erb
+++ b/app/views/shared/_form_signup.html.erb
@@ -1,24 +1,37 @@
-<% provide(:title, 'Sign up') %>
-<h3>Sign up</h3>
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages', object: @user%>
 
-      <%= f.label :name %>
-      <%= f.text_field :name, class: 'form-control' %>
+<div class="backgr-img container">
+  <br><br><br><br><br>
+  <% provide(:title, 'Sign up') %>
+    <div class="main">
+      <div class="row">
+        <div class="col-md-5 col-md-offset-3">
+        <h3>Sign up</h3><br>
+          <%= form_for(@user) do |f| %>
+            <%= render 'shared/error_messages', object: @user%>
 
-      <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
+            <%= f.label :name %>
+            <%= f.text_field :name, class: 'form-control' %>
 
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
+            <%= f.label :email %>
+            <%= f.email_field :email, class: 'form-control' %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
+            <%= f.label :password %>
+            <%= f.password_field :password, class: 'form-control' %>
 
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
-    <% end %>
-  </div>
+            <%= f.label :password_confirmation, "Confirmation" %>
+            <%= f.password_field :password_confirmation, class: 'form-control' %>
+            <br>
+            <%= f.submit "Create my account", class: "btn btn-primary" %>
+          <% end %>
+          <p> <%= link_to "Login now!", login_path %>
+          <%= link_to "Visit side!", root_path %></p>
+        </div>
+      </div>
+    </div>
+  
 </div>
