--- a/app/views/admin/orders/index.xls.erb
+++ b/app/views/admin/orders/index.xls.erb
@@ -12,6 +12,8 @@
         <Cell><Data ss:Type="String"><%=t "views.orders.index.employee" %></Data></Cell>
         <Cell><Data ss:Type="String"><%=t "views.orders.index.address" %></Data></Cell>
         <Cell><Data ss:Type="String"><%=t "views.orders.index.total_money" %></Data></Cell>
+        <Cell><Data ss:Type="String"><%=t "views.orders.index.status" %></Data></Cell>
+        <Cell><Data ss:Type="String"><%=t "views.orders.index.created_at" %></Data></Cell>
       </Row>
       <% @orders.each_with_index {|item,index | %>
           <Row>
@@ -20,6 +22,8 @@
             <Cell><Data ss:Type="String"><%= item.employee.name if item.employee %></Data></Cell>
             <Cell><Data ss:Type="String"><%= item.address %></Data></Cell>
             <Cell><Data ss:Type="String"><%= item.total_money %></Data></Cell>
+            <Cell><Data ss:Type="String"><%= item.status == 1 ? 'new' : item.status == 2 ? 'inprogress' : 'done' %></Data></Cell>
+            <Cell><Data ss:Type="String"><%= item.created_at.strftime Settings.format_time_with_hour %></Data></Cell>
           </Row>
       <% } %>
     </Table>
