--- a/app/views/admin/foods/_modal_food.html.erb
+++ b/app/views/admin/foods/_modal_food.html.erb
@@ -25,7 +25,7 @@
             </div>
           </div>
           
-          <p class="vote"><strong>91%</strong> of buyers enjoyed this product! <strong>(87 votes)</strong></p>
+          <%# <p class="vote"><strong>91%</strong> of buyers enjoyed this product! <strong>(87 votes)</strong></p> %>
           <p><b><%= t'created_at' %>:</b>
             <span><%= @food.created_at.strftime Settings.format_time_with_hour %></span>
           </p>
