--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -2,14 +2,13 @@
   <div class="container">
       <div class="row">
           <div class="col-sm-12 col-md-10 col-md-offset-1">
-              
               <table class="table table-hover">
                 <thead>
                     <tr>
                         <th>Product</th>
                         <th>Quantity</th>
                         <th class="text-center">Price</th>
-                        <th class="text-center">Total</th>
+                        <%# <th class="text-center">Total</th> %>
                         <th>Action</th>
                     </tr>
                 </thead>
@@ -21,9 +20,9 @@
                               <img src="<%= cart.food.img_url %>"  height="150" width="300">
                             </div>
                             <div class="media-body col-md-3">
-                                <h4 id="cart-name" class="show-cart"><%= cart.food.name %></h4>
-                                <h5 class="media-heading"> by <a href="#">Brand name</a></h5>
-                                <span>Status: </span><span class="text-success"><strong>In Stock</strong></span>
+                                <h4 id="cart-name" class="show-cart"><b><%= cart.food.name %></b></h4>
+                                <%# <h5 class="media-heading">= cart.food.food_category_id</h5> %>
+                                <%# <span>Status: </span><span class="text-success"><strong>In Stock</strong></span> %>
                             </div>
                           </div>
                         </td>
@@ -35,9 +34,8 @@
                             <%= get_promotion_price cart.food.price, cart.food.discount %>
                           </div>
                         </td>
-                        <td class="col-sm-1 col-md-1 text-center" id="total_item"><strong></strong></td>
+                        <%# <td class="col-sm-1 col-md-1 text-center" id="total_item"><strong></strong></td> %>
                         <td class="col-sm-1 col-md-1 text-center">
-                        
                           <span id="delete-cart"><%= link_to  cart, method: :delete, :remote => true  do%><i class="fa fa-times btn btn-danger" aria-hidden="true"></i><% end %></span>
                         </td>
                     </tr>
