--- a/app/views/admin/food_categories/edit.html.erb
+++ b/app/views/admin/food_categories/edit.html.erb
@@ -1,10 +1,13 @@
-<h4>Edit Food Category</h4>
+<h4>Sửa Danh Mục Đồ Ăn</h4>
 
 <%= form_for [:admin,@foodcategory], html: {id: "new_user", class: 'col-md-5'} do |f| %>
       <%= render 'shared/error_messages', object: @foodcategory %>
       
       <%= f.label :name %>
       <%= f.text_field :name, class: "form-control"%>
+
+      <%= f.label :description %>
+      <%= f.text_field :description, class: "form-control"%>
       
       <br>
     <%= f.submit "Edit", class: "btn btn-primary" %>
