--- a/app/views/admin/food_categories/index.html.erb
+++ b/app/views/admin/food_categories/index.html.erb
@@ -28,6 +28,7 @@
       <thead>
         <tr>
           <th class="text-center col-md-2"><%= sort_link @search, :name, t(".name") %></th>
+          <th class="text-center col-md-2"><%= sort_link @search, :description, t(".description") %></th>
           <th class="text-center col-md-2"><%= sort_link @search, :created_at, t(".created_at") %></th>
           
           <th class="text-center col-md-2 col-sm-2 col-xs-2" ><%= t ".action" %></th>
@@ -37,6 +38,7 @@
         <% @foodcategories.each do |foodcategory| %>
           <tr>
             <td class="text-center"><%= foodcategory.name %></td>
+            <td class="text-center"><%= foodcategory.description %></td>
             <td class="text-center"><%= foodcategory.created_at.strftime Settings.format_time_with_hour %></td>
            
             <td class="text-center">
