--- a/app/views/admin/food_categories/new.html.erb
+++ b/app/views/admin/food_categories/new.html.erb
@@ -1,9 +1,12 @@
-<h4>Create Category</h4>
+<h4>Thêm Mới Danh Mục</h4>
 <%= form_for [:admin, @foodcategory], :html => {class: 'col-md-5'} do |f| %>
       <%= render 'shared/error_messages', object: @foodcategory %>
       
       <%= f.label :name %>
       <%= f.text_field :name, class: "form-control"%>
+
+      <%= f.label :description %>
+      <%= f.text_field :description, class: "form-control"%>
 
       <br>
     <%= f.submit "Create", class: "btn btn-primary" %>
